--- a/SimpleWeather.UWP/Controls/SunPhasePanel.xaml
+++ b/SimpleWeather.UWP/Controls/SunPhasePanel.xaml
@@ -2,7 +2,6 @@
     x:Class="SimpleWeather.UWP.Controls.SunPhasePanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:charting="using:WinRTXamlToolkit.Controls.DataVisualization.Charting"
     xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,6 +9,26 @@
     mc:Ignorable="d"
     d:DesignHeight="200"
     d:DesignWidth="600">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Dark">
+                    <Color x:Key="SunViewPaintColor">Yellow</Color>
+                    <Color x:Key="SunViewPhaseArcColor">White</Color>
+                    <Color x:Key="SunViewBottomTextColor">White</Color>
+                </ResourceDictionary>
+                <ResourceDictionary x:Key="Light">
+                    <Color x:Key="SunViewPaintColor">Orange</Color>
+                    <Color x:Key="SunViewPhaseArcColor">Black</Color>
+                    <Color x:Key="SunViewBottomTextColor">Black</Color>
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
+            <SolidColorBrush x:Name="PaintColorBrush" Color="{ThemeResource SunViewPaintColor}" />
+            <SolidColorBrush x:Name="PhaseArcColorBrush" Color="{ThemeResource SunViewPhaseArcColor}" />
+            <SolidColorBrush x:Name="BottomTextColorBrush" Color="{ThemeResource SunViewBottomTextColor}" />
+        </ResourceDictionary>
+    </UserControl.Resources>
 
     <win2d:CanvasVirtualControl x:Name="Canvas" Background="Transparent" ClearColor="Transparent"
                          RegionsInvalidated="Canvas_RegionsInvalidated" CreateResources="Canvas_CreateResources">
