WeatherNow: refresh data if unit changes

--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -14,7 +14,7 @@
     mc:Ignorable="d"
     d:DesignHeight="1600"
     d:DesignWidth="1600"
-    DataContext="{x:Bind WeatherView}">
+    DataContext="{x:Bind WeatherView, Mode=OneWay}">
 
     <Page.Resources>
         <ResourceDictionary>
