--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -14,11 +14,11 @@
         <ResourceDictionary>
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Dark">
-                    <x:Double x:Key="DropShadowOpacity">0.7</x:Double>
+                    <x:Double x:Key="DropShadowOpacity">1.0</x:Double>
                     <Color x:Key="DropShadowColorBrush">Black</Color>
                 </ResourceDictionary>
                 <ResourceDictionary x:Key="Light">
-                    <x:Double x:Key="DropShadowOpacity">0.7</x:Double>
+                    <x:Double x:Key="DropShadowOpacity">1.0</x:Double>
                     <Color x:Key="DropShadowColorBrush">Gray</Color>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
@@ -33,26 +33,16 @@
         </Grid.ColumnDefinitions>
         <toolkitControls:ImageEx CachingStrategy="Custom" IsCacheEnabled="True" DecodePixelWidth="1080" Source="{x:Bind ViewModel.ImageData.ImageUri, Mode=OneWay}" Foreground="White" 
                                  Stretch="UniformToFill" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{ThemeResource ImageExProgressStyle}" />
-        <Grid Grid.ColumnSpan="3">
-            <Grid.Background>
-                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                    <LinearGradientBrush.GradientStops>
-                        <GradientStop Color="#33121212" Offset="0" />
-                        <GradientStop Color="#40121212" Offset="0.5" />
-                        <GradientStop Color="#33121212" Offset="1.0" />
-                    </LinearGradientBrush.GradientStops>
-                </LinearGradientBrush>
-            </Grid.Background>
-        </Grid>
         <ProgressRing Grid.ColumnSpan="3" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" Foreground="White" />
-        <toolkitControls:DropShadowPanel BlurRadius="10.0" 
+        <toolkitControls:DropShadowPanel BlurRadius="15.0"
                                          ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
                                          VerticalAlignment="Center" Margin="10,0">
             <TextBlock x:Name="LocationName" Text="{x:Bind ViewModel.LocationName, FallbackValue='San Fernando del Valle de Catamarca, Argentina', Mode=OneWay}"
                        FontSize="24" FontWeight="SemiBold"
                        TextWrapping="WrapWholeWords" TextTrimming="CharacterEllipsis" />
         </toolkitControls:DropShadowPanel>
-        <toolkitControls:DropShadowPanel BlurRadius="10.0" ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
+        <toolkitControls:DropShadowPanel BlurRadius="15.0"
+                                         ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
                                          VerticalAlignment="Center" Grid.Column="1">
             <TextBlock x:Name="CurrentTemp" Text="{x:Bind ViewModel.CurrTemp, FallbackValue='70º', Mode=OneWay}"
                        FontSize="26" FontWeight="Bold" Padding="10,0" />
