--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -151,13 +151,13 @@
                 <toolkitMedia:RadialGradientBrush AlphaMode="Premultiplied" Center="0.5,0.5" ColorInterpolationMode="SRgbLinearInterpolation"
                                                   GradientOrigin="0.5,0.5" RadiusX="0.5" RadiusY="0.5" SpreadMethod="Pad">
                     <GradientStop Color="#83121212" Offset="0" />
-                    <GradientStop Color="#30121212" Offset="1" />
+                    <GradientStop Color="Transparent" Offset="1" />
                 </toolkitMedia:RadialGradientBrush>
             </Grid.Background>
         </Grid>
         <ScrollViewer x:Name="MainViewer" VerticalScrollMode="Auto" ViewChanged="MainViewer_ViewChanged" Padding="16,0"
                       x:Load="{x:Bind WeatherView.Location, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}"
-                      Loaded="DeferedControl_Loaded" RequestedTheme="{x:Bind WeatherView.BackgroundTheme, Mode=OneWay}">
+                      Loaded="DeferedControl_Loaded" RequestedTheme="{x:Bind BackgroundTheme, Mode=OneWay}">
             <StackPanel MaxWidth="1280">
                 <Grid x:Name="ConditionPanel" RequestedTheme="Dark">
                     <Grid.RowDefinitions>
